# content-search

./: .gitignore  Cargo.toml  README.md
benches/: experiments.rs
experiments/batch_files/: generate_random_files.ps1
src/: main.rs
src/lib/: booyer_moore_search.rs  command_parser.rs  file_search.rs  metrics.rs  mod.rs  rabin_karpin_search.rs
tests/: integration_tests.rs
